Fix dark mode navlink hover effect

--- a/css/style.css
+++ b/css/style.css
@@ -270,7 +270,11 @@ u {
     .project:hover .project-header,
     .project:hover .project-subheader,
     .project:hover .project-year {
-        color: rgba(255, 255, 255, 1) !important;
+        color: rgba(255, 255, 255, 1);
+    }
+
+    ul a:hover {
+        color: rgba(255, 255, 255, 1);
     }
 }
 
@@ -339,7 +343,11 @@ body.dark-mode .project:hover,
 body.dark-mode .project:hover .project-header,
 body.dark-mode .project:hover .project-subheader,
 body.dark-mode .project:hover .project-year {
-    color: rgba(255, 255, 255, 1) !important;
+    color: rgba(255, 255, 255, 1);
+}
+
+body.dark-mode ul a:hover {
+    color: rgba(255, 255, 255, 1);
 }
 
 /* Light Mode */
@@ -579,6 +587,12 @@ ul a {
     font-optical-sizing: auto;
     font-style: normal;
     color: rgba(0, 0, 0, 0.5);
+    transition: color 0.2s ease;
+}
+
+ul a:hover {
+    color: rgba(0, 0, 0, 1);
+    transition: color 0.2s ease;
 }
 
 .current {
